tests/baselines/reference/strictTupleLength.errors.txt
strictTupleLength.ts(6,15): error TS2454: Variable 't0' is used before being assigned.
strictTupleLength.ts(7,15): error TS2454: Variable 't1' is used before being assigned.
strictTupleLength.ts(8,15): error TS2454: Variable 't2' is used before being assigned.
strictTupleLength.ts(9,20): error TS2454: Variable 'arr' is used before being assigned.
strictTupleLength.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 't1' must be of type '[number]', but here has type '[number, number]'.
strictTupleLength.ts(11,10): error TS2454: Variable 't2' is used before being assigned.
strictTupleLength.ts(12,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 't2' must be of type '[number, number]', but here has type '[number]'.
strictTupleLength.ts(16,12): error TS2454: Variable 'b' is used before being assigned.
strictTupleLength.ts(18,1): error TS2322: Type 'number[]' is not assignable to type '[number]'.
  Target requires 1 element(s) but source may have fewer.
strictTupleLength.ts(18,6): error TS2454: Variable 'arr' is used before being assigned.


==== strictTupleLength.ts (10 errors) ====
    var t0: [];
    var t1: [number];
    var t2: [number, number];
    var arr: number[];
    
    var len0: 0 = t0.length;
                  ~~
!!! error TS2454: Variable 't0' is used before being assigned.
    var len1: 1 = t1.length;
                  ~~
!!! error TS2454: Variable 't1' is used before being assigned.
    var len2: 2 = t2.length;
                  ~~
!!! error TS2454: Variable 't2' is used before being assigned.
    var lena: number = arr.length;
                       ~~~
!!! error TS2454: Variable 'arr' is used before being assigned.
    
    var t1 = t2; // error
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 't1' must be of type '[number]', but here has type '[number, number]'.
!!! related TS6203 strictTupleLength.ts:2:5: 't1' was also declared here.
             ~~
!!! error TS2454: Variable 't2' is used before being assigned.
    var t2 = t1; // error
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 't2' must be of type '[number, number]', but here has type '[number]'.
!!! related TS6203 strictTupleLength.ts:3:5: 't2' was also declared here.
    
    type A<T extends any[]> = T['length'];
    var b: A<[boolean]>;
    var c: 1 = b;
               ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    t1 = arr; // error with or without strict
    ~~
!!! error TS2322: Type 'number[]' is not assignable to type '[number]'.
!!! error TS2322:   Target requires 1 element(s) but source may have fewer.
         ~~~
!!! error TS2454: Variable 'arr' is used before being assigned.
    arr = t1; // ok with or without strict
    